modified service, client, router, tests, and configuration